Fixed issue with bootstrap accordions where the panels would overlap with the contact section if they were not closed in certain order

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,3 +195,9 @@ a:visited, a:link{
     background-color: #1abc9c;
     border: 1px solid #1abc9c;
 }
+
+
+#recaptcha {
+    width: 304px;
+    margin: 0 auto;
+}
